# faasm-experiments

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  requirements.txt  workon.sh
.github/workflows/: tests.yml
ansible/: ansible.cfg  benchmark.yml  debug.yml  experiment_client.yml  mpi_benchmark.yml  openmpi.yml
ansible/inventory/: billing_knative.ini
ansible/roles/billing/files/: metrics.py
ansible/roles/experiment_code/tasks/: main.yml
ansible/roles/prk/tasks/: main.yml
docs/: benchmarks.md  cpython.md  experiments.md  genomics.md  genomics_demo.md  horovod.md  linalg.md  mpi.md  numpy.md  overheads.md  polybench.md  prk.md  python.md  sgd.md  tensorflow.md
func/: CMakeLists.txt
func/cpy/: CMakeLists.txt  mini.cpp
func/gene/: CMakeLists.txt  mapper.cpp
func/polybench/: CMakeLists.txt
func/polybench/datamining/correlation/: correlation.c  correlation.h
func/polybench/datamining/covariance/: covariance.c  covariance.h
func/polybench/linear-algebra/blas/gemm/: gemm.c  gemm.h
func/polybench/linear-algebra/blas/gemver/: gemver.c  gemver.h
func/polybench/linear-algebra/blas/gesummv/: gesummv.c  gesummv.h
func/polybench/linear-algebra/blas/symm/: symm.c  symm.h
func/polybench/linear-algebra/blas/syr2k/: syr2k.c  syr2k.h
func/polybench/linear-algebra/blas/syrk/: syrk.c  syrk.h
func/polybench/linear-algebra/blas/trmm/: trmm.c  trmm.h
func/polybench/linear-algebra/kernels/2mm/: 2mm.c  2mm.h
func/polybench/linear-algebra/kernels/3mm/: 3mm.c  3mm.h
func/polybench/linear-algebra/kernels/atax/: atax.c  atax.h
func/polybench/linear-algebra/kernels/bicg/: bicg.c  bicg.h
func/polybench/linear-algebra/kernels/doitgen/: doitgen.c  doitgen.h
func/polybench/linear-algebra/kernels/mvt/: mvt.c  mvt.h
func/polybench/linear-algebra/solvers/cholesky/: cholesky.c  cholesky.h
func/polybench/linear-algebra/solvers/durbin/: durbin.c  durbin.h
func/polybench/linear-algebra/solvers/gramschmidt/: gramschmidt.c  gramschmidt.h
func/polybench/linear-algebra/solvers/lu/: lu.c  lu.h
func/polybench/linear-algebra/solvers/ludcmp/: ludcmp.c  ludcmp.h
func/polybench/linear-algebra/solvers/trisolv/: trisolv.c  trisolv.h
func/polybench/medley/deriche/: deriche.c  deriche.h
func/polybench/medley/floyd-warshall/: floyd-warshall.c  floyd-warshall.h
func/polybench/medley/nussinov/: Nussinov.orig.c  nussinov.c  nussinov.h
func/polybench/stencils/adi/: adi.c  adi.h
func/polybench/stencils/fdtd-2d/: fdtd-2d.c  fdtd-2d.h
func/polybench/stencils/heat-3d/: heat-3d.c  heat-3d.h
func/polybench/stencils/jacobi-1d/: jacobi-1d.c  jacobi-1d.h
func/polybench/stencils/jacobi-2d/: jacobi-2d.c  jacobi-2d.h
func/polybench/stencils/seidel-2d/: seidel-2d.c  seidel-2d.h
func/polybench/utilities/: polybench.c  polybench.h
func/sgd/: CMakeLists.txt
func/tf/: CMakeLists.txt
include/profiler/: Profiler.h  function.h
src/bench/: CMakeLists.txt  GenericFunctionProfiler.cpp  GenericFunctionProfiler.h  bench_func.cpp  bench_mem.cpp  bench_time.cpp  bench_tpt.cpp  thread_bench_mem.cpp  thread_bench_time.cpp
src/capacity/: CMakeLists.txt  capacity_experiment.cpp  max_mem_experiment.cpp  max_thread_experiment.cpp  rlimit_experiment.cpp
src/omp/: CMakeLists.txt  README.md  bench_loops.cpp
src/omp/musl-container/: omp-musl.dockerfile
src/omp/musl-container/src/: Makefile  docker_benchmarker.cpp  multi_cr.cpp
src/omp/musl-container/src/faasmp/: reduction.h
src/polybench/: CMakeLists.txt  PolybenchProfiler.cpp  PolybenchProfiler.h  poly_bench.cpp
src/profiler/: CMakeLists.txt  Profiler.cpp  function.cpp
src/python/: CMakeLists.txt  PythonProfiler.cpp  PythonProfiler.h  python_bench.cpp
src/sgd/: CMakeLists.txt  README.md  reuters.cpp
src/state_tpt/: state_tpt_client.cpp  state_tpt_server.cpp
tasks/: __init__.py  bench_capacity.py  bench_mem.py  bench_omp.py  bench_time.py  bench_tpt.py  clapack.py  cpython.py  data.py  dev.py  experiments.py  genomics.py  horovod.py  lammps.py  lulesh.py  matrix_data.py  mxnet.py  polybench.py  prk.py  tensorflow.py
tasks/util/: billing.py  billing_data.py  env.py  genomics.py  matrices.py
